--- a/note-service.properties
+++ b/note-service.properties
@@ -1,2 +1,3 @@
 server.port= 1984
-# allow for RefreshScopemanagement.endpoints.web.exposure.include=*
+# allow for RefreshScope
+management.endpoints.web.exposure.include=*
